--- a/ordenando.html
+++ b/ordenando.html
@@ -5,22 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ordenando</title>
     <script src="ordenando.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    
 </head>
-<body>
-
-    <label for="valor">Valor</label><br>
-    <input type="number" id="valor"><br>
-    <button onclick="add()">Adicionar</button><br>
-    <hr>
-    <select id="algoritmo">
-        <option value="bubble">Bubble Sort</option>
-        <option value="selection">Selection Sort</option>
-        <option value="quick" selected>Quick Sort</option>
-    </select>
-    <br>
-    <button onclick="ordenar()">Ordenar</button>
-    <button onclick="misturar()">Misturar</button>
+<body class="container">
+    <form class="form m-2">
+        <label for="valor" class="form-label">Valor</label><br>
+        <input class="form-control" type="number" id="valor" ><br>
+        <button onclick="add()" class="btn btn-primary m2">Adicionar</button><br>
+        <hr>
+        <select class="form-select">
+            <option value="bubble">Bubble Sort</option>
+            <option value="selection">Selection Sort</option>
+            <option value="quick" selected>Quick Sort</option>
+        </select>
+        <br>
+        <button onclick="ordenar()" class="btn btn-primary m2">Ordenar</button>
+        <button onclick="misturar()" class="btn btn-primary m2">Misturar</button>
+    </form>
     <br>
 <hr>
     <ul id="valores"></ul>
